--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
 		"sanity"
 	],
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^6.18.1",
+		"@typescript-eslint/parser": "^6.18.1",
 		"eslint": "^8.56.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-import": "^2.29.1",
 		"prettier": "^3.1.1",
 		"typescript": "^5.3.3"
 	}
