--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	"author": "Sanctuary Computer",
 	"license": "UNLICENSED",
 	"private": true,
+	"scripts": {
+		"prepare": "husky install"
+	},
 	"workspaces": [
 		"www",
 		"sanity"
@@ -17,7 +20,17 @@
 		"eslint": "^8.56.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.29.1",
+		"husky": "^8.0.3",
+		"lint-staged": "^15.2.0",
 		"prettier": "^3.1.1",
 		"typescript": "^5.3.3"
+	},
+	"lint-staged": {
+		"*.(json|js|jsx|ts|tsx|html|css|md)": [
+			"prettier --write"
+		],
+		"*(.js|jsx|ts|tsx)": [
+			"eslint --fix"
+		]
 	}
 }
