--- a/www/package.json
+++ b/www/package.json
@@ -6,20 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:all": "yarn test:types && yarn test:prettier && yarn test:lint && yarn test:jest",
+    "test:lint": "next lint",
+    "test:prettier": "prettier --check ./src",
+    "test:types": "tsc --noEmit",
+    "test:jest": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint-config-next": "14.0.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint-config-next": "14.0.4"
+    "tailwindcss": "^3.3.0"
   }
 }
