ci: add lighthouse audit to CI

--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -17,20 +17,21 @@ on:
         required: true
         type: string
 
-
-
 jobs:
   # Create a preview deployment on PR pushes (not main or prod)
   deploy-preview:
     name: Preview
     if: github.ref != 'refs/head/main'
     runs-on: ubuntu-latest
+    outputs:
+      preview-url: ${{ steps.vercel.outputs.preview-url }}
     defaults:
       run:
         working-directory: ${{ inputs.directory }}
     steps:
       - uses: actions/checkout@v2
       - uses: amondnet/vercel-action@v20
+        id: vercel
         with:
           vercel-project-id: ${{ inputs.vercel-project-id }}
           vercel-org-id: ${{ inputs.vercel-org-id }}
@@ -56,3 +57,81 @@ jobs:
           scope: ${{ inputs.vercel-org-id }}
           vercel-token: ${{ secrets.vercel-token }}
           github-token: ${{ secrets.github-token }}
+
+  audit_with_lighthouse:
+    name: Audit with Lighthouse
+    runs-on: ubuntu-latest
+    needs: [deploy-preview]
+    if: github.ref != 'refs/head/main' && github.ref != 'refs/heads/prod'
+    permissions:
+      contents: write
+      pull-requests: write
+    defaults:
+      run:
+        working-directory: ${{ inputs.directory }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Audit preview URL with Lighthouse (mobile)
+        id: lighthouse_audit_mobile
+        uses: treosh/lighthouse-ci-action@v9
+        with:
+          urls: |
+            ${{ needs.deploy-preview.outputs.preview-url }}
+          uploadArtifacts: true
+          temporaryPublicStorage: true
+
+      - name: Audit preview URL with Lighthouse (desktop)
+        id: lighthouse_audit
+        uses: treosh/lighthouse-ci-action@v9
+        with:
+          urls: |
+            ${{ needs.deploy-preview.outputs.preview-url }}
+          uploadArtifacts: true
+          temporaryPublicStorage: true
+          configPath: .github/lighthouse/lighthouse-config.json
+
+      - name: Format Lighthouse score
+        id: format_lighthouse_score
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            const mobileLinks = ${{ steps.lighthouse_audit_mobile.outputs.links }};
+            const mobileResult = ${{ steps.lighthouse_audit_mobile.outputs.manifest }}[0].summary;
+            const desktopLinks = ${{ steps.lighthouse_audit.outputs.links }};
+            const desktopResult = ${{ steps.lighthouse_audit.outputs.manifest }}[0].summary;
+            const previewUrl = "${{ needs.deploy-preview.outputs.preview-url }}";
+            const formatResult = (res) => Math.round((res * 100));
+            const score = res => res >= 90 ? '🟢' : res >= 50 ? '🟠' : '🔴';
+            Object.keys(mobileResult).forEach(key => mobileResult[key] = formatResult(mobileResult[key]));
+            Object.keys(desktopResult).forEach(key => desktopResult[key] = formatResult(desktopResult[key]));
+            const comment = [
+              `## ⚡️ Lighthouse Report`,
+              `### Mobile ([view report](${Object.values(mobileLinks)[0]}))`,
+              '| Category | Score |',
+              '| --- | --- |',
+              `| ${score(mobileResult.performance)} Performance | ${mobileResult.performance} |`,
+              `| ${score(mobileResult.accessibility)} Accessibility | ${mobileResult.accessibility} |`,
+              `| ${score(mobileResult['best-practices'])} Best practices | ${mobileResult['best-practices']} |`,
+              `| ${score(mobileResult.seo)} SEO | ${mobileResult.seo} |`,
+              ` `,
+              `### Desktop ([view report](${Object.values(desktopLinks)[0]}))`,
+              '| Category | Score |',
+              '| --- | --- |',
+              `| ${score(desktopResult.performance)} Performance | ${desktopResult.performance} |`,
+              `| ${score(desktopResult.accessibility)} Accessibility | ${desktopResult.accessibility} |`,
+              `| ${score(desktopResult['best-practices'])} Best practices | ${desktopResult['best-practices']} |`,
+              `| ${score(desktopResult.seo)} SEO | ${desktopResult.seo} |`,
+              ` `,
+              `*Lighthouse ran on [${previewUrl}](${previewUrl})*`
+            ].join('\n');
+            core.setOutput("comment", comment);
+      - name: Add comment to PR
+        uses: mshick/add-pr-comment@v1
+        with:
+          message: |
+            ${{ steps.format_lighthouse_score.outputs.comment }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
+          allow-repeats: false # This is the default
