--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -62,7 +62,7 @@ jobs:
     name: Audit with Lighthouse
     runs-on: ubuntu-latest
     needs: [deploy-preview]
-    if: github.ref != 'refs/head/main' && github.ref != 'refs/heads/prod'
+    if: github.ref != 'refs/head/main'
     permissions:
       contents: write
       pull-requests: write
