chore: set up storybook with example component

--- a/www/.eslintrc.json
+++ b/www/.eslintrc.json
@@ -1,3 +1,18 @@
 {
-  "extends": ["next/core-web-vitals", "../.eslintrc.shared.json"]
+  "extends": [
+    "plugin:storybook/recommended",
+    "next/core-web-vitals",
+    "../.eslintrc.shared.json"
+  ],
+  "rules": {
+    "import/no-default-export": "error"
+  },
+  "overrides": [
+    {
+      "files": ["src/pages/**/*", "src/**/*.stories.*"],
+      "rules": {
+        "import/no-default-export": "off"
+      }
+    }
+  ]
 }
