--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
+  "resolutions": {
+    "jackspeak": "2.1.1"
+  },
   "lint-staged": {
     "*.(json|js|jsx|ts|tsx|html|css|md)": [
       "prettier --write"
