--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -21,7 +21,7 @@ jobs:
   # Create a preview deployment on PR pushes (not main or prod)
   deploy-preview:
     name: Preview
-    if: github.ref != 'refs/head/main'
+    if: github.ref != 'refs/head/main' && github.ref != 'refs/head/production'
     runs-on: ubuntu-latest
     outputs:
       preview-url: ${{ steps.vercel.outputs.preview-url }}
@@ -40,9 +40,28 @@ jobs:
           github-token: ${{ secrets.github-token }}
 
   # Create an aliased deployment on pushes to main
-  deploy-prod:
-    name: Production
+  deploy-staging:
+    name: Staging
     if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ inputs.directory }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: amondnet/vercel-action@v20
+        with:
+          vercel-project-id: ${{ inputs.vercel-project-id }}
+          vercel-org-id: ${{ inputs.vercel-org-id }}
+          scope: ${{ inputs.vercel-org-id }}
+          vercel-token: ${{ secrets.vercel-token }}
+          github-token: ${{ secrets.github-token }}
+          alias-domains: 'firefly-staging.vercel.app'
+
+  # Create a prod deployment on pushes to production
+  deploy-production:
+    name: Production
+    if: github.ref == 'refs/heads/production'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -58,11 +77,12 @@ jobs:
           vercel-token: ${{ secrets.vercel-token }}
           github-token: ${{ secrets.github-token }}
 
+
   audit_with_lighthouse:
     name: Audit with Lighthouse
     runs-on: ubuntu-latest
     needs: [deploy-preview]
-    if: github.ref != 'refs/head/main'
+    if: github.ref != 'refs/head/main' && github.ref != 'refs/head/production'
     permissions:
       contents: write
       pull-requests: write
