--- a/.github/workflows/check-and-deploy.yml
+++ b/.github/workflows/check-and-deploy.yml
@@ -21,6 +21,7 @@ jobs:
       github-token: ${{ secrets.GITHUB_TOKEN }}
     with:
       vercel-project-id: ${{ vars.VERCEL_PROJECT_ID }}
+      vercel-storybook-project-id: ${{ vars.VERCEL_STORYBOOK_PROJECT_ID }}
       vercel-org-id: ${{ vars.VERCEL_ORG_ID }}
       directory: 'www'
 
