--- a/sanity/package.json
+++ b/sanity/package.json
@@ -18,11 +18,13 @@
     "@sanity/vision": "^3.23.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.0",
     "react-is": "^18.2.0",
     "sanity": "^3.23.4",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
+    "@sanity-typed/types": "^6.3.0",
     "@sanity/eslint-config-studio": "^3.0.1",
     "@types/react": "^18.0.25"
   }
