--- a/www/package.json
+++ b/www/package.json
@@ -18,11 +18,13 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^7.93.0",
+    "@sanity/client": "^6.11.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@portabletext/types": "^2.0.8",
     "@storybook/addon-essentials": "^7.6.7",
     "@storybook/addon-interactions": "^7.6.7",
     "@storybook/addon-links": "^7.6.7",
