--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
     "*(.js|jsx|ts|tsx)": [
       "eslint --fix"
     ]
+  },
+  "dependencies": {
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "commitlint-plugin-cleanfeet": "^0.1.2",
+    "conventional-changelog-atom": "^4.0.0",
+    "conventional-changelog-conventionalcommits": "^7.0.2"
   }
 }
