--- a/www/package.json
+++ b/www/package.json
@@ -17,6 +17,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@sentry/nextjs": "^7.93.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
