--- a/www/package.json
+++ b/www/package.json
@@ -17,8 +17,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@sentry/nextjs": "^7.93.0",
     "@sanity/client": "^6.11.1",
+    "@sentry/nextjs": "^7.93.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
@@ -30,6 +30,7 @@
     "@storybook/addon-links": "^7.6.7",
     "@storybook/addon-onboarding": "^1.0.10",
     "@storybook/blocks": "^7.6.7",
+    "@storybook/nextjs": "^7.6.8",
     "@storybook/react": "^7.6.7",
     "@storybook/react-vite": "^7.6.7",
     "@storybook/test": "^7.6.7",
