--- a/www/.eslintrc.json
+++ b/www/.eslintrc.json
@@ -9,7 +9,7 @@
   },
   "overrides": [
     {
-      "files": ["src/pages/**/*", "src/**/*.stories.*"],
+      "files": ["src/pages/**/*", "src/**/*.stories.*", "tailwind.config.ts"],
       "rules": {
         "import/no-default-export": "off"
       }
