--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "devDependencies": {
+    "@types/prettier": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
