--- a/www/package.json
+++ b/www/package.json
@@ -14,7 +14,8 @@
     "test:jest": "jest",
     "test:watch": "jest --watch",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "update-mock-data": "esno ./scripts/getMockData.ts"
   },
   "dependencies": {
     "@sanity/client": "^6.11.1",
@@ -44,6 +45,7 @@
     "autoprefixer": "^10.0.1",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-storybook": "^0.6.15",
+    "esno": "^4.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
