feat: add page preview to sanity

--- a/sanity/package.json
+++ b/sanity/package.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "@sanity/document-internationalization": "^2.0.2",
+    "@sanity/studio-secrets": "^2.0.2",
     "@sanity/vision": "^3.23.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
