--- a/www/package.json
+++ b/www/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@sanity/client": "^6.11.1",
     "@sentry/nextjs": "^7.93.0",
+    "@types/vimeo__player": "^2.18.3",
+    "@vimeo/player": "^2.21.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
