--- a/www/package.json
+++ b/www/package.json
@@ -22,7 +22,8 @@
     "@sentry/nextjs": "^7.93.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
     "@portabletext/types": "^2.0.8",
