--- a/sanity/package.json
+++ b/sanity/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.0.0",
     "react-is": "^18.2.0",
     "sanity": "^3.23.4",
+    "sanity-plugin-simpler-color-input": "^2.2.0",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
