--- a/www/package.json
+++ b/www/package.json
@@ -21,6 +21,7 @@
     "prepare": "yarn update-mock-data"
   },
   "dependencies": {
+    "@datadog/browser-rum": "^5.9.0",
     "@sanity/client": "^6.11.1",
     "@sentry/nextjs": "^7.93.0",
     "@types/vimeo__player": "^2.18.3",
