--- a/www/package.json
+++ b/www/package.json
@@ -8,8 +8,9 @@
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
-    "test:all": "yarn test:types && yarn test:prettier && yarn test:lint && yarn test:jest",
+    "test:all": "yarn test:types && yarn test:prettier && yarn test:lint && yarn test:queryByteLengths && yarn test:jest",
     "test:lint": "next lint",
+    "test:queryByteLengths": "esno ./scripts/testQueryByteLengths.ts",
     "test:prettier": "prettier --check ./src",
     "test:types": "tsc --noEmit",
     "test:jest": "jest",
