chore: ignore and remove mockdata.json

--- a/www/.gitignore
+++ b/www/.gitignore
@@ -38,3 +38,7 @@ next-env.d.ts
 
 # Sentry Config File
 .sentryclirc
+
+# Mock data
+# - run yarn update-mock-data to generate this!
+src/mockData/mockData.json
