--- a/www/package.json
+++ b/www/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "update-mock-data": "esno ./scripts/getMockData.ts"
+    "update-mock-data": "esno ./scripts/getMockData.ts",
+    "prepare": "yarn update-mock-data"
   },
   "dependencies": {
     "@sanity/client": "^6.11.1",
