--- a/www/package.json
+++ b/www/package.json
@@ -31,6 +31,7 @@
     "next-hubspot": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-inview": "^4.5.0",
     "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
