--- a/www/package.json
+++ b/www/package.json
@@ -21,6 +21,7 @@
     "prepare": "yarn update-mock-data"
   },
   "dependencies": {
+    "@axe-core/react": "^4.8.5",
     "@datadog/browser-rum": "^5.9.0",
     "@sanity/client": "^6.11.1",
     "@sentry/nextjs": "^7.93.0",
