--- a/.github/workflows/deploy-vercel.yml
+++ b/.github/workflows/deploy-vercel.yml
@@ -24,7 +24,7 @@ jobs:
   # Create a preview deployment on PR pushes (not main or prod)
   deploy-preview:
     name: Preview
-    if: github.ref != 'refs/head/main' && github.ref != 'refs/head/production'
+    if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/production'
     runs-on: ubuntu-latest
     outputs:
       preview-url: ${{ steps.vercel.outputs.preview-url }}
@@ -44,7 +44,7 @@ jobs:
 
   deploy-storybook-preview:
     name: Storybook Preview
-    if: github.ref != 'refs/head/main' && github.ref != 'refs/head/production'
+    if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/production'
     runs-on: ubuntu-latest
     outputs:
       preview-url: ${{ steps.vercel.outputs.preview-url }}
@@ -115,6 +115,7 @@ jobs:
       - uses: amondnet/vercel-action@v20
         with:
           vercel-args: '--prod'
+          alias-domains: 'firefly-health.vercel.app'
           vercel-project-id: ${{ inputs.vercel-project-id }}
           vercel-org-id: ${{ inputs.vercel-org-id }}
           scope: ${{ inputs.vercel-org-id }}
@@ -126,7 +127,7 @@ jobs:
     name: Audit with Lighthouse
     runs-on: ubuntu-latest
     needs: [deploy-preview]
-    if: github.ref != 'refs/head/main' && github.ref != 'refs/head/production'
+    if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/production'
     permissions:
       contents: write
       pull-requests: write
