--- a/.github/workflows/check-and-deploy.yml
+++ b/.github/workflows/check-and-deploy.yml
@@ -32,12 +32,12 @@ jobs:
       vercel-org-id: ${{ vars.VERCEL_ORG_ID }}
       directory: 'www'
 
-  # deploy-cms:
-  #   name: Deploy CMS
-  #   if: github.ref == 'refs/heads/production'
-  #   needs: [benchmark-web, test-sanity]
-  #   uses: ./.github/workflows/deploy-sanity.yml
-  #   secrets:
-  #     sanity-auth-token: ${{ secrets.SANITY_DEPLOY_TOKEN }}
-  #   with:
-  #     directory: 'sanity'
+  deploy-cms:
+    name: Deploy CMS
+    if: github.ref == 'refs/heads/production'
+    needs: [benchmark-web, test-sanity]
+    uses: ./.github/workflows/deploy-sanity.yml
+    secrets:
+      sanity-auth-token: ${{ secrets.SANITY_DEPLOY_TOKEN }}
+    with:
+      directory: 'sanity'
