feat: set up documentVariantInfo plugin & fields

--- a/sanity/package.json
+++ b/sanity/package.json
@@ -18,6 +18,7 @@
     "@sanity/document-internationalization": "^2.0.2",
     "@sanity/studio-secrets": "^2.0.2",
     "@sanity/vision": "^3.23.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.0",
