feat: set up a/b rewrites in middleware

--- a/www/package.json
+++ b/www/package.json
@@ -28,6 +28,7 @@
     "@sentry/nextjs": "^7.93.0",
     "@types/vimeo__player": "^2.18.3",
     "@vimeo/player": "^2.21.0",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-hubspot": "^1.2.0",
@@ -52,6 +53,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.11",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
