--- a/www/package.json
+++ b/www/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@axe-core/react": "^4.8.5",
     "@datadog/browser-rum": "^5.9.0",
+    "@next/third-parties": "^14.1.4",
     "@sanity/client": "^6.11.1",
     "@sentry/nextjs": "^7.93.0",
     "@types/vimeo__player": "^2.18.3",
