--- a/.github/workflows/test-sanity.yml
+++ b/.github/workflows/test-sanity.yml
@@ -7,13 +7,45 @@ on:
         type: string
 jobs:
   test-sanity:
-    name: Test Sanity
+    name: Test Sanity Schema
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ${{ inputs.directory }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ./.github/workflows/yarn-setup
       - name: Validate Schema
         run: yarn sanity schema validate --workspace staging
+
+  # TODO: This is not actually helpful until we can omit draft documents from validation.
+  #
+  # See:
+  # - https://github.com/sanity-io/sanity/issues/5510
+  # - https://sanity-io-land.slack.com/archives/C9Z7RC3V1/p1711408434146109
+  #
+  # test-sanity-documents-staging:
+  #   if: github.ref != 'refs/heads/main' && github.ref != 'refs/heads/production'
+  #   name: Test Sanity Schema
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: ${{ inputs.directory }}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: ./.github/workflows/yarn-setup
+  #     - name: Validate Schema
+  #       run: yarn sanity documents validate -y --workspace staging --level error
+
+  # test-sanity-documents-production:
+  #   if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/production'
+  #   name: Test Sanity Schema
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: ${{ inputs.directory }}
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: ./.github/workflows/yarn-setup
+  #     - name: Validate Schema
+  #       run: yarn sanity documents validate -y --workspace production --level error
