test: add eslint-plugin-security

--- a/www/.eslintrc.json
+++ b/www/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": [
     "plugin:storybook/recommended",
+    "plugin:security/recommended-legacy",
     "next/core-web-vitals",
     "../.eslintrc.shared.json"
   ],
