--- a/www/package.json
+++ b/www/package.json
@@ -57,6 +57,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint-config-next": "14.1.4",
+    "eslint-plugin-security": "^2.1.1",
     "eslint-plugin-storybook": "^0.6.15",
     "esno": "^4.0.0",
     "jest": "^29.7.0",
