fix: remove test-sanity from workflows

--- a/.github/workflows/check-and-deploy.yml
+++ b/.github/workflows/check-and-deploy.yml
@@ -13,11 +13,12 @@ jobs:
     with:
       directory: 'www'
 
-  test-sanity:
-    name: Test Sanity
-    uses: ./.github/workflows/test-sanity.yml
-    with:
-      directory: 'sanity'
+  # TODO: This is not actually helpful until we can omit draft documents from validation.
+  # test-sanity:
+  #   name: Test Sanity
+  #   uses: ./.github/workflows/test-sanity.yml
+  #   with:
+  #     directory: 'sanity'
 
   deploy-web:
     name: Deploy Vercel
