fix: remove test-sanity from workflows

--- a/.github/workflows/check-and-deploy.yml
+++ b/.github/workflows/check-and-deploy.yml
@@ -20,9 +20,10 @@ jobs:
   #   with:
   #     directory: 'sanity'
 
+  # removed test-sanity from 'needs'
   deploy-web:
     name: Deploy Vercel
-    needs: [benchmark-web, test-sanity]
+    needs: [benchmark-web]
     uses: ./.github/workflows/deploy-vercel.yml
     secrets:
       vercel-token: ${{ secrets.VERCEL_TOKEN }}
@@ -33,10 +34,11 @@ jobs:
       vercel-org-id: ${{ vars.VERCEL_ORG_ID }}
       directory: 'www'
 
+  # removed test-sanity from 'needs'
   deploy-cms:
     name: Deploy CMS
     if: github.ref == 'refs/heads/production'
-    needs: [benchmark-web, test-sanity]
+    needs: [benchmark-web]
     uses: ./.github/workflows/deploy-sanity.yml
     secrets:
       sanity-auth-token: ${{ secrets.SANITY_DEPLOY_TOKEN }}
