--- a/www/.eslintrc.json
+++ b/www/.eslintrc.json
@@ -6,7 +6,7 @@
     "../.eslintrc.shared.json"
   ],
   "rules": {
-    "import/no-default-export": "warning"
+    "import/no-default-export": "warn"
   },
   "overrides": [
     {
