--- a/www/package.json
+++ b/www/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
-    "build:static": "STATIC_BUILD=true next build",
+    "build:static": "STATIC_BUILD=true next build && next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "test:all": "yarn test:types && yarn test:prettier && yarn test:lint && yarn test:queryByteLengths && yarn test:jest",
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "next": "14.0.4",
     "next-hubspot": "^1.2.0",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-swipeable": "^7.0.1",
@@ -56,6 +57,7 @@
     "@types/jest": "^29.5.11",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/prettier": "^3.0.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -66,6 +68,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "storybook": "^7.6.7",
     "tailwindcss": "^3.3.0"
   }
