--- a/www/package.json
+++ b/www/package.json
@@ -18,6 +18,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "update-mock-data": "esno ./scripts/getMockData.ts",
+    "update-site-data": "esno ./scripts/getSiteData.ts",
     "prepare": "yarn update-mock-data"
   },
   "dependencies": {
