feat: add field to deploy

--- a/.github/workflows/generate-static-cms.yml
+++ b/.github/workflows/generate-static-cms.yml
@@ -2,6 +2,7 @@ name: Generate Static CMS
 on:
   workflow_dispatch:
   repository_dispatch:
+    types: [cms-generate-webhook]
 
 jobs:
   Generate-Static-CMS:
