fix: add build step for cms workflow

--- a/.github/workflows/generate-static-cms.yml
+++ b/.github/workflows/generate-static-cms.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: ./.github/workflows/yarn-setup
       - name: get latest cms data
         run: yarn update-site-data
+      - name: build
+        run: cd www && yarn build
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
