--- a/www/package.json
+++ b/www/package.json
@@ -18,7 +18,7 @@
     "test:watch": "jest --watch",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "update-mock-data": "esno ./scripts/getMockData.ts",
+    "update-mock-data": "NEXT_PUBLIC_SANITY_DATASET=production esno ./scripts/getMockData.ts",
     "update-site-data": "esno ./scripts/getSiteData.ts",
     "prepare": "yarn update-mock-data"
   },
