--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,14 +26,12 @@ jobs:
     steps:
       - checkout
       - aws-cli/setup:
-          profile_name: firefly-ci
-          role_arn: $ROLE_ARN
-          region: us-east-2
+          role_arn: ${ROLE_ARN}
+          region: ${REGION}
       - aws-s3/sync:
           arguments: |
             --acl public-read
           from: ./www/out
-          profile_name: firefly-ci
           to: $BUCKET_NAME
 
 workflows:
