--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,8 @@ jobs:
       - aws-s3/sync:
           arguments: |
             --acl public-read
-          from: ./www/out
-          to: $BUCKET_NAME
+          from: ./project/www/out
+          to: ${BUCKET_NAME}
 
 workflows:
   build-and-deploy:
