--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,10 @@ jobs:
       - run:
           name: Run tests
           command: yarn test --passWithNoTests
+      - persist_to_workspace:
+          root: ~/www
+          paths:
+            - out
 
   deploy:
     docker:
@@ -30,7 +34,7 @@ jobs:
       - aws-s3/sync:
           arguments: |
             --acl public-read
-          from: ./project/www/out
+          from: ~/www/out
           to: ${BUCKET_NAME}
 
 workflows:
