--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,10 @@ workflows:
       - build:
           filters:
             branches:
-              only: staging
+              only: production
       - deploy:
           requires:
             - build
           filters:
             branches:
-              only: staging
+              only: production
