--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,10 @@ jobs:
           command: cd www && yarn build:static
           environment:
             STATIC_BUILD: true
+            DATADOG_APPLICATION_ID: ${DATADOG_APPLICATION_ID}
+            DATADOG_CLIENT_TOKEN: ${DATADOG_CLIENT_TOKEN}
+            DATADOG_SERVICE: ${DATADOG_SERVICE}
+            DATADOG_SITE: ${DATADOG_SITE}
       - run:
           name: Run tests
           command: yarn test --passWithNoTests
