--- a/www/package.json
+++ b/www/package.json
@@ -38,6 +38,7 @@
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "react-swipeable": "^7.0.1",
     "what-input": "^5.2.12"
   },
