--- a/www/package.json
+++ b/www/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next-export-optimize-images",
-    "build:analyze": "ANALYZE=true next build && next-export-optimize-images",
-    "build:static": "STATIC_BUILD=true next build && next-export-optimize-images && next-sitemap && esno scripts/copyMissingBContent.ts",
+    "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
+    "build:static": "STATIC_BUILD=true next build && next-sitemap && esno scripts/copyMissingBContent.ts",
     "start": "next start",
     "lint": "next lint",
     "test:all": "yarn test:types && yarn test:lint && yarn test:queryByteLengths && yarn test:jest",
@@ -39,7 +39,6 @@
     "react": "^18",
     "react-dom": "^18",
     "react-swipeable": "^7.0.1",
-    "sharp": "^0.33.3",
     "what-input": "^5.2.12"
   },
   "devDependencies": {
@@ -70,7 +69,6 @@
     "esno": "^4.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "next-export-optimize-images": "^4.3.1",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "storybook": "^7.6.7",
