--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ jobs:
   deploy:
     docker:
       - image: cimg/base:stable
+    environment:
+      AWS_DEFAULT_REGION: us-east-2
     steps:
       - checkout
       - attach_workspace:
@@ -34,16 +36,26 @@ jobs:
       - aws-cli/setup:
           role_arn: arn:aws:iam::905418149376:role/CircleCI
       - aws-s3/sync:
+          arguments: |
+            --delete
           from: /home/circleci/project/www/out
           to: s3://marketing-website-assets-905418149376
+      - run:
+          name: Deploy to CloudFront
+          command: aws cloudfront create-invalidation --distribution-id E2KP9J5JTG1DGX --paths "/*"
+          environment:
+            # CloudFront's CreateInvalidation API occasionally has a high error
+            # rate, so we increase the number of attempted retries to
+            # compensate.
+            AWS_MAX_ATTEMPTS: 10
 
 workflows:
   build-and-deploy:
     jobs:
-      - build:
+      - build
       - deploy:
           requires:
             - build
           filters:
             branches:
-              only: main
+              only: kweaver-ci-test
