--- a/.github/workflows/check-and-deploy.yml
+++ b/.github/workflows/check-and-deploy.yml
@@ -7,12 +7,6 @@ on:
       - production
 
 jobs:
-  benchmark-web:
-    name: Test & Benchmark
-    uses: ./.github/workflows/benchmark.yml
-    with:
-      directory: 'www'
-
   # TODO: This is not actually helpful until we can omit draft documents from validation.
   # test-sanity:
   #   name: Test Sanity
@@ -24,7 +18,7 @@ jobs:
   deploy-cms:
     name: Deploy CMS
     if: github.ref == 'refs/heads/production'
-    needs: [benchmark-web]
+    # needs: [test-sanity]
     uses: ./.github/workflows/deploy-sanity.yml
     secrets:
       sanity-auth-token: ${{ secrets.SANITY_DEPLOY_TOKEN }}
