fix: pull cms content from production

--- a/.github/workflows/generate-static-cms.yml
+++ b/.github/workflows/generate-static-cms.yml
@@ -13,6 +13,7 @@ jobs:
       - name: get latest cms data
         run: yarn update-site-data
         env:
+          NEXT_PUBLIC_FORCE_DATASET: production
           NEXT_PUBLIC_SANITY_DATASET: production
       - name: build
         run: cd www && yarn build
